syntax = "proto3";

option java_multiple_files=true;
option java_package="employee";

service EmployeeService{
  rpc SayHello (HelloRequest) returns (HelloResponse);

  //create Employee
  rpc CreateEmployee (EmployeeRequest) returns (EmployeeResponse);

  //getEmployee Details
  rpc GetEmployeeById (EmployeeIdRequest) returns (EmployeeFullResponse);

  //getAllEmployee Details
  rpc GetAllEmployeeDetails (Empty) returns (EmployeeList);

  //updateEmployeeDetails
  rpc updateEmployeeDetails (EmployeeUpdateRequest) returns (EmployeeFullResponse);

  //deleteEmployeeDetails
  rpc deleteEmployeeDetails (EmployeeIdRequest) returns (EmployeeDeleteResponse);
}

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string message = 2;
}

message EmployeeRequest{
  string name = 2;
  string email = 3;
  string dept= 4;
  int32 age = 5;
  double salary=6;
}

message EmployeeResponse{
  string name = 1;
  string dept = 2;
}

message EmployeeIdRequest{
  int32 id = 1;
}

message EmployeeFullResponse{
  int32 id = 1;
  string name = 2;
  string email = 3;
  string dept= 4;
  int32 age = 5;
  double salary=6;
}

message Empty{

}

message EmployeeList{
  repeated EmployeeFullResponse employees = 1;
}

message EmployeeUpdateRequest{
  int32 id = 1;

  string dept = 2;
  int32 age = 3;
  double salary = 4;
}

message EmployeeDeleteResponse{
   string message = 1;
}